# StarSpace

./: CONTRIBUTING.md  LICENSE.md  PATENTS  README.md  makefile  makefile_compress  makefile_py  query_nn  query_predict  src.tgz  starspace
.github/workflows/: makefile.yml
MVS/: StarSpace.sln  StarSpaceLib.vcxproj  StarSpaceLib.vcxproj.filters
MVS/embed_doc/: embed_doc.vcxproj  embed_doc.vcxproj.filters
MVS/matrix_test/: matrix_test.vcxproj  matrix_test.vcxproj.filters
MVS/print_ngrams/: print_ngrams.vcxproj  print_ngrams.vcxproj.filters
MVS/proj_test/: proj_test.vcxproj  proj_test.vcxproj.filters
MVS/query_nn/: query_nn.vcxproj  query_nn.vcxproj.filters
MVS/query_predict/: query_predict.vcxproj  query_predict.vcxproj.filters
MVS/starspace/: starspace.vcxproj  starspace.vcxproj.filters
examples/: README.md  classification_ag_news.sh  image_feature_example_cifar10.sh  multi_relation_example.sh  recomm_user_artists.sh  wikipedia_article_search.sh  wikipedia_article_search_full.sh  wikipedia_article_search_test.sh  wikipedia_sentence_matching.sh  wikipedia_sentence_matching_full.sh
python/: CMakeLists.example.txt  CMakeLists.txt  README.md  build.sh  conanfile.txt  starspace_pybind.cc  starspace_pythonic.cc  starspace_pythonic.h
python/test/: input.txt  tagged_post.txt  test.py  test_predictTags.py
query_nn.dSYM/Contents/: Info.plist
query_nn.dSYM/Contents/Resources/DWARF/: query_nn
query_predict.dSYM/Contents/: Info.plist
query_predict.dSYM/Contents/Resources/DWARF/: query_predict
src/: data.cpp  data.h  dict.cpp  dict.h  doc_data.cpp  doc_data.h  doc_parser.cpp  doc_parser.h  fb_parser.cpp  fb_parser.h  main.cpp  matrix.h  model.cpp  model.h  parser.cpp  parser.h  proj.cpp  proj.h  querynn.cpp  starspace.cpp  starspace.h
src/apps/: .#query_nn.cpp  embed_doc.cpp  print_ngrams.cpp  query_nn.cpp  query_predict.cpp
src/test/: matrix_test.cpp  proj_test.cpp
src/utils/: args.cpp  args.h  normalize.cpp  normalize.h  utils.cpp  utils.h
starspace.dSYM/Contents/: Info.plist
starspace.dSYM/Contents/Resources/DWARF/: starspace
